# heron

./: .env.example  .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SKILL.md  deny.toml  requirements-dev.txt  rust-toolchain.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: action_items.rs  asset_protocol.rs  asset_scope.rs  daemon.rs  diagnostics.rs  disk.rs  event_bus.rs  events_bridge.rs  frontend_error.rs  keychain.rs  keychain_resolver.rs  lib.rs  main.rs  meetings.rs  model_download.rs  notes.rs  onboarding.rs  platform_detect.rs  preflight.rs  resummarize.rs  runtime_checks.rs  salvage.rs  settings.rs  shortcuts.rs  tray.rs
apps/desktop/src-tauri/tests/: asset_scope.rs  ipc_contract.rs  ipc_shape.rs  settings_migration.rs
apps/desktop/src-tauri/tests/fixtures/: settings_full.json  settings_pre_tier1.json
apps/desktop/src-tauri/tests/snapshots/: ipc_shape__heron_get_meeting__outcome_ok.snap  ipc_shape__heron_get_meeting__outcome_unavailable.snap  ipc_shape__heron_get_meeting__response_meeting.snap  ipc_shape__heron_get_meeting__response_meeting_minimal.snap  ipc_shape__heron_meeting_summary__outcome_ok.snap  ipc_shape__heron_meeting_summary__outcome_unavailable.snap  ipc_shape__heron_meeting_summary__response_summary.snap  ipc_shape__heron_prepare_context__outcome_ok.snap  ipc_shape__heron_prepare_context__request.snap  ipc_shape__heron_prepare_context__request_empty_attendees.snap  ipc_shape__heron_prepare_context__response_ack.snap  ipc_shape__heron_report_frontend_error__class_lifecycle_error.snap  ipc_shape__heron_report_frontend_error__class_promise_rejection.snap  ipc_shape__heron_report_frontend_error__class_render_error.snap  ipc_shape__heron_report_frontend_error__class_unknown.snap  ipc_shape__heron_report_frontend_error__request_null_stacks.snap  ipc_shape__heron_update_action_item__patch_clear_fields.snap  ipc_shape__heron_update_action_item__patch_default_serialized.snap  ipc_shape__heron_update_action_item__patch_set_fields.snap  ipc_shape__heron_update_action_item__response.snap  ipc_shape__heron_update_action_item__response_nullable_fields.snap  ipc_shape__heron_write_settings__request.snap
crates/heron-audio/: Cargo.toml
crates/heron-audio/src/: aec.rs  backpressure.rs  disk.rs  lib.rs  metrics_names.rs  mic_capture.rs  process_tap.rs  ringbuffer.rs  wav_writer.rs
crates/heron-audio/tests/: end_to_end_real.rs  mic_capture_real.rs  process_tap_real.rs
crates/heron-bot/: Cargo.toml
crates/heron-bot/examples/: recall-spike.rs
crates/heron-bot/src/: context.rs  disclosure.rs  fsm.rs  ids.rs  lib.rs
crates/heron-bot/src/recall/: client.rs  mod.rs  projection.rs  tests.rs
crates/heron-cli/: Cargo.toml  build.rs
crates/heron-cli/src/: daemon.rs  lib.rs  main.rs  pipeline.rs  record_delegate.rs  salvage.rs  session.rs  session_log.rs  summarize.rs  synthesize.rs
crates/heron-cli/tests/: daemon_client.rs  end_to_end.rs  orchestrator_run.rs  record_delegate.rs  summarize_command.rs
crates/heron-doctor/: Cargo.toml
crates/heron-doctor/src/: anomalies.rs  lib.rs  log_reader.rs  main.rs  runtime.rs
crates/heron-doctor/src/runtime/: keychain_macos.rs  network.rs  onnx.rs  zoom.rs
crates/heron-event-http/: Cargo.toml
crates/heron-event-http/src/: lib.rs
crates/heron-event-tauri/: Cargo.toml
crates/heron-event-tauri/src/: lib.rs
crates/heron-llm/: Cargo.toml
crates/heron-llm/src/: anthropic.rs  claude_code.rs  codex.rs  content.rs  cost.rs  key_resolver.rs  lib.rs  metrics_emit.rs  metrics_labels.rs  openai.rs  select.rs  transcript.rs
crates/heron-llm/templates/: meeting.hbs
crates/heron-llm/tests/: backend_dispatch.rs  live_api.rs
crates/heron-llm/tests/snapshots/: backend_dispatch__anthropic_request_body.snap  backend_dispatch__openai_request_body.snap
crates/heron-metrics/: Cargo.toml
crates/heron-metrics/src/: label.rs  lib.rs  naming.rs  recorder.rs  timed.rs
crates/heron-orchestrator/: Cargo.toml  build.rs
crates/heron-orchestrator/src/: auto_record.rs  builder.rs  capture.rs  compose.rs  context.rs  health.rs  lib.rs  live_session.rs  metrics_names.rs  pipeline_glue.rs  platform.rs  read_side.rs  state.rs  validation.rs  vault_read.rs
crates/heron-orchestrator/tests/: auto_record.rs  capture_lifecycle.rs  context_flows.rs  vault_reads.rs
crates/heron-pipeline/: Cargo.toml  build.rs
crates/heron-pipeline/src/: lib.rs  pipeline.rs  session.rs
crates/heron-policy/: Cargo.toml
crates/heron-policy/src/: controller.rs  escalation.rs  filter.rs  lib.rs  queue.rs  validate.rs
crates/heron-policy/tests/: cross_crate.rs
crates/heron-realtime/: Cargo.toml
crates/heron-realtime/src/: fallback.rs  lib.rs  mock.rs  openai.rs  validate.rs
crates/heron-session/: Cargo.toml
crates/heron-session/src/: lib.rs
crates/heron-speech/: Cargo.toml  build.rs
crates/heron-speech/src/: lib.rs  metrics_names.rs  partial_writer.rs  selection.rs  sherpa.rs  whisperkit_bridge.rs
crates/heron-speech/tests/: whisperkit_real.rs
crates/heron-types/: Cargo.toml
crates/heron-types/src/: clock.rs  lib.rs  prefixed_id.rs  recording.rs  recovery.rs
crates/heron-vault/: Cargo.toml  build.rs
crates/heron-vault/src/: calendar.rs  encode.rs  id_match.rs  lib.rs  merge.rs  metrics_emit.rs  purge.rs  validate.rs  writer.rs
crates/heron-vault/tests/: action_item_patch.rs  merge_matrix.rs  write_metrics.rs
crates/heron-zoom/: Cargo.toml  build.rs
crates/heron-zoom/src/: aligner.rs  ax_bridge.rs  lib.rs
crates/heron-zoom/tests/: ax_observer_real.rs
crates/herond/: Cargo.toml  build.rs
crates/herond/src/: auth.rs  error.rs  lib.rs  main.rs  stub.rs
crates/herond/src/routes/: events.rs  health.rs  meetings.rs  metrics.rs  mod.rs  unimpl.rs
crates/herond/tests/: api.rs  clio_full_pipeline.rs  v2_bridge_health.rs  v2_lifecycle.rs
docs/: api-bot-openapi.yaml  api-design-research.md  api-desktop-openapi.yaml  stack.md  (+16 more)
(+194 files in other folders)
