[workspace]
resolver = "2"
members = ["crates/*", "apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
# AGPL-3.0-or-later. See LICENSE at the repo root for full text.
# AGPL was chosen so that anyone running heron as a network service
# (a hosted note-taker, a hosted meeting agent) must publish their
# modifications — the alternative is a permissive license under which
# a SaaS competitor could close-source a fork.
license = "AGPL-3.0-or-later"
publish = false

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# macOS bindings — VERSION-PINNED, see docs/implementation.md §1.3
cidre = "=0.5.3"
cpal = "0.15"
swift-rs = "1.0"
security-framework = "3"
core-foundation = "0.10"

# audio processing
hound = "3.5"
webrtc-audio-processing = "=2.0.4"
rtrb = "0.3"
rubato = "0.16"
symphonia = "0.5"

# speech-to-text — see docs/implementation.md §8.3. Pinned exact per
# §1.3 because the bundled sherpa-onnx C ABI shifts between point
# releases and the prebuilt dylibs the `download-binaries` feature
# fetches are matched 1:1 to the binding version.
sherpa-rs = { version = "=0.6.8", default-features = false, features = ["download-binaries"] }

# platform-standard cache / config / data dirs
dirs = "5"

# blocking HTTP client used by `heron_speech::sherpa::ensure_model` for
# the one-shot model download. Aligned with the version sherpa-rs-sys
# already pulls in via its `download-binaries` build script so the
# dep tree stays compact.
ureq = "2.12"

# SHA-256 verification of downloaded model artifacts. Already in the
# transitive dep tree via reqwest; surfacing it here makes the audit
# obvious.
sha2 = "0.10"

# HTTP / LLM
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# templating / markdown
handlebars = "6"
yaml-front-matter = "0.1"
pulldown-cmark = "0.12"

# fuzzy text match (for v1.1 ID-resolution fallback; bundled in v1
# but unused unless prompt-side ID preservation fails frequently)
strsim = "0.11"

heron-types = { path = "crates/heron-types" }
heron-audio = { path = "crates/heron-audio" }
heron-speech = { path = "crates/heron-speech" }
heron-zoom = { path = "crates/heron-zoom" }
heron-llm = { path = "crates/heron-llm" }
heron-vault = { path = "crates/heron-vault" }
heron-cli = { path = "crates/heron-cli" }
# v2 trait sketches per docs/api-design-spec.md §13. Not yet wired
# into heron-cli; they ship trait surfaces only until the spike.
heron-bot = { path = "crates/heron-bot" }
heron-bridge = { path = "crates/heron-bridge" }
heron-policy = { path = "crates/heron-policy" }
heron-realtime = { path = "crates/heron-realtime" }
# v1 desktop trait sketches per docs/api-desktop-openapi.yaml. Not yet
# wired into heron-cli; they ship trait surfaces only until the
# orchestrator hub consolidation lands.
heron-event = { path = "crates/heron-event" }
heron-event-http = { path = "crates/heron-event-http" }
heron-event-tauri = { path = "crates/heron-event-tauri" }
heron-session = { path = "crates/heron-session" }

[profile.dev]
opt-level = 1

# Lints applied to every workspace crate via `[lints] workspace = true`.
# Mirrors the flags the `rust` CI workflow enforces with `cargo clippy`,
# so violations fail a local `cargo clippy` instead of waiting for CI.
# Note: clippy lints do not fire under plain `cargo check` — they only
# kick in for `cargo clippy`. The CI workflow keeps the equivalent CLI
# `-D` flags as belt-and-suspenders for any future crate that forgets
# `[lints] workspace = true`.
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
