[package]
name = "heron-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-types = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS-only Core Audio + Foundation bindings used by `process_tap`.
# Tracks the 0.15.x line that exposes `core_audio::TapDesc`,
# `core_audio::hardware_tapping::Tap`, `core_audio::AggregateDevice`,
# `core_audio::Device::create_io_proc_id_with_block`, and
# `ns::RunningApp::with_bundle_id` — the symbols the process tap
# scaffolding needs. See `docs/implementation.md` §1.3 for the
# version-risk rationale. Bumping cidre is a half-day re-validation
# (§1.3 + the `tests/process_tap_real.rs` runbook) — coordinate.
[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", features = ["macos_14_2"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
