[package]
name = "heron-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-types = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# Lock-free single-producer single-consumer ringbuffer used by the
# Core Audio IO callback (realtime thread, no allocations / no locks)
# to hand frames to a Tokio consumer task that broadcasts them out.
# Pure Rust, cross-platform; only the macOS process-tap path actually
# pushes into it today, but the dep is unconditional so non-macOS
# builds compile the consumer-side surface unchanged.
rtrb = "0.3"
# WAV writer used at session stop (`wav_writer.rs`) to finalize
# `mic.wav` / `tap.wav` / `mic_clean.wav` from the broadcast frame
# stream. Pure Rust, no system deps, cross-platform — same crate the
# week-9 archival encode pass will read these files back through.
hound = { workspace = true }
# WebRTC AudioProcessing (APM) — used by `aec.rs` for echo cancellation
# only (`process_capture_frame` / `process_render_frame`). The `bundled`
# feature compiles the upstream C++ library statically via
# `webrtc-audio-processing-sys`'s `build.rs`, which drives `meson` +
# `ninja` against a vendored upstream source tree (avoids relying on
# a system pkg-config install). macOS-14 GitHub runners ship clang++
# but **not** meson/ninja by default; `.github/workflows/rust.yml`
# `brew install`s both before `cargo build` for that reason.
# Developers building locally on a fresh macOS install need the same:
# `brew install meson ninja`. The 2.x line tracks PulseAudio's
# repackaging of upstream WebRTC AEC3 — see docs/archives/implementation.md
# §1.3 for the version-risk rationale; bumping is a half-day
# re-validation against the §6.3 AEC test rig.
webrtc-audio-processing = { version = "=2.0.4", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# macOS-only Core Audio + Foundation bindings used by `process_tap`.
# Tracks the 0.15.x line that exposes `core_audio::TapDesc`,
# `core_audio::hardware_tapping::Tap`, `core_audio::AggregateDevice`,
# `core_audio::Device::create_io_proc_id_with_block`, and
# `ns::RunningApp::with_bundle_id` — the symbols the process tap
# scaffolding needs. See `docs/archives/implementation.md` §1.3 for the
# version-risk rationale. Bumping cidre is a half-day re-validation
# (§1.3 + the `tests/process_tap_real.rs` runbook) — coordinate.
[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", features = ["macos_14_2"] }
# Mic capture (`mic_capture` module). cpal is cross-platform, but the
# call sites are gated on `target_os = "macos"` for v0 — Linux/Windows
# mic capture isn't shipping yet (§6 targets macOS 14.2+). Declaring
# the dep under the macOS target keeps `cargo check` on Linux/Windows
# from pulling cpal's CoreAudio-sys / alsa transitive deps.
cpal = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
