[package]
name = "heron-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-types = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# `examples/recall-spike.rs` only — exercises the Recall.ai REST surface
# directly to validate which spec invariants the driver can honor before
# we commit to a `RecallDriver: MeetingBotDriver` impl. See
# docs/build-vs-buy-decision.md.
[dev-dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = "0.22"

[lints]
workspace = true
