[package]
name = "heron-bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-types = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
# `RecallDriver` (src/recall/) calls Recall.ai's REST surface; previously
# only the `examples/recall-spike.rs` harness needed reqwest. Promoted to
# a primary dep when the impl landed (per docs/spike-findings.md
# "Outstanding action items").
reqwest = { workspace = true }
# Encodes the placeholder MP3 fixture for `automatic_audio_output`. See
# docs/spike-findings.md §"Recommendations" item 5.
base64 = "0.22"

[dev-dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { workspace = true }
# Wiremock-driven Recall API tests live under `src/recall/`; the
# `examples/recall-spike.rs` harness still uses `reqwest` (now a primary
# dep) for live runs.
wiremock = "0.6"

[lints]
workspace = true
