[package]
name = "heron-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "heron"
path = "src/main.rs"

[lib]
name = "heron_cli"
path = "src/lib.rs"

[dependencies]
heron-types = { workspace = true }
heron-zoom = { workspace = true }
heron-llm = { workspace = true }
heron-vault = { workspace = true }
# Shared session enums + envelope shapes — the daemon-delegating
# subcommands send/parse the same wire types `herond` projects, so we
# pull the schema crates rather than re-defining duplicate JSON
# structs that would drift on every OpenAPI change.
heron-session = { workspace = true }
# Per issue #190: the v1 capture pipeline now lives in `heron-pipeline`
# so `heron-orchestrator` can depend on it without pulling the CLI's
# clap/reqwest/daemon-client surface into the daemon runtime graph.
# `heron-cli::session` and `heron-cli::pipeline` re-export
# `heron-pipeline::session` and `heron-pipeline::pipeline` verbatim.
# `heron-{audio,speech,event}` are pulled in transitively via
# `heron-pipeline`; integration tests that name `heron_audio` /
# `heron_speech` types directly declare them under `[dev-dependencies]`.
heron-pipeline = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
hound = { workspace = true }
reqwest = { workspace = true }
# Named explicitly because the daemon SSE stream signature mentions
# `bytes::Bytes`. Version is sourced from the workspace so any
# future reqwest 0.13 bump only touches one place.
bytes = { workspace = true }
eventsource-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_yaml = { workspace = true }
wiremock = "0.6"
# Used by integration tests under `tests/` that name the bridge
# crates' error types and trait surface directly. Production code
# reaches them transitively via `heron-pipeline`, so they belong here
# rather than in `[dependencies]` (issue #218).
heron-audio = { workspace = true }
heron-speech = { workspace = true }

[lints]
workspace = true
