[package]
name = "heron-doctor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "heron-doctor"
path = "src/main.rs"

[lib]
name = "heron_doctor"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
