[package]
name = "heron-event-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-event = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2" }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tokio = { workspace = true }

[lints]
workspace = true
