[package]
name = "heron-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-types = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
which = "6"
wiremock = "0.6"
# Snapshot-based body-shape pinning for the wiremock dispatch tests.
# `json` feature normalizes serde_json::Value through a stable
# representation so a key-order shuffle in the wire types doesn't
# produce a spurious snapshot diff. Dev-only — does not enter the
# published crate's dep graph.
insta = { version = "1", features = ["json"] }

[lints]
workspace = true
