[package]
name = "heron-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-types = { workspace = true }
heron-metrics = { workspace = true }
async-trait = { workspace = true }
handlebars = { workspace = true }
metrics = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# `heron-metrics` is a normal dep above, but the integration test crate
# (`tests/backend_dispatch.rs`) reaches `init_prometheus_recorder()` to
# render exposition output for metric-emission assertions. Re-listing
# here lets the test crate import it without an explicit `pub use` from
# the library.
heron-metrics = { workspace = true }
tempfile = "3"
which = "6"
wiremock = "0.6"
# Snapshot-based body-shape pinning for the wiremock dispatch tests.
# `json` feature normalizes serde_json::Value through a stable
# representation so a key-order shuffle in the wire types doesn't
# produce a spurious snapshot diff. Dev-only — does not enter the
# published crate's dep graph.
insta = { version = "1", features = ["json"] }

[features]
# Opt-in gate for the nightly real-pipeline test set. Off by default so
# `cargo test --workspace` on a contributor's machine never reaches for
# the live Anthropic / OpenAI APIs or paid CLI quota. The
# `nightly.yml` workflow is the canonical caller; see issue #194.
real-pipeline = []

[lints]
workspace = true
