[package]
name = "heron-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
heron-event = { workspace = true }
heron-event-http = { workspace = true }
heron-session = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
