[package]
name = "heron-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
heron-event = { workspace = true }
heron-event-http = { workspace = true }
heron-cli = { workspace = true }
heron-llm = { workspace = true }
heron-session = { workspace = true }
heron-types = { workspace = true }
heron-vault = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = "3"

[lints]
workspace = true
