[package]
name = "heron-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
heron-bot = { workspace = true }
heron-bridge = { workspace = true }
heron-event = { workspace = true }
heron-event-http = { workspace = true }
heron-policy = { workspace = true }
heron-realtime = { workspace = true }
heron-speech = { workspace = true }
# Per issue #190: depend on `heron-pipeline` (the v1 FSM + audio →
# STT → LLM → vault data flow) directly rather than on the CLI
# binary crate. Inverting the old `heron-cli`-as-daemon-dep
# direction was the original goal of the issue: the daemon runtime
# should not pull clap, reqwest, the SSE client, etc. just to start
# a capture.
heron-pipeline = { workspace = true }
heron-llm = { workspace = true }
heron-session = { workspace = true }
heron-types = { workspace = true }
heron-vault = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
tempfile = "3"

[lints]
workspace = true
