[package]
name = "heron-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[dependencies]
heron-types = { workspace = true }
heron-audio = { workspace = true }
heron-speech = { workspace = true }
heron-zoom = { workspace = true }
heron-llm = { workspace = true }
heron-vault = { workspace = true }
heron-session = { workspace = true }
heron-event = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
