[package]
name = "heron-speech"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"
links = "WhisperKitHelper"

[dependencies]
heron-metrics = { workspace = true }
heron-types = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
hound = { workspace = true }
metrics = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sherpa-rs = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
libc = "0.2"
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }

[features]
# Opt-in gate for the nightly real-pipeline test set. Off by default so
# `cargo test --workspace` on a contributor's machine never reaches for
# the WhisperKit model bundle. The `nightly.yml` workflow is the
# canonical caller; see issue #194.
real-pipeline = []

[lints]
workspace = true
