[package]
name = "heron-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"
links = "EventKitHelper"

[dependencies]
heron-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "validate-vault"
path = "src/bin/validate-vault.rs"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
