[package]
name = "heron-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"
links = "EventKitHelper"

[dependencies]
heron-types = { workspace = true }
heron-metrics = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pulldown-cmark = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
# Pure-Rust ASCII transliteration of Unicode meeting titles (Tier 4 #19
# slug pipeline). BSD-3-Clause, allow-listed in `deny.toml`. Pinned at
# the workspace level so any future bump touches one file.
deunicode = { workspace = true }
# Structured warn line on the empty-slug → Id fallback path
# (`writer::finalize_with_pattern`). Already a transitive dep through
# the workspace; surfaced here so the writer can log without pulling
# `log`.
tracing = { workspace = true }

[[bin]]
name = "validate-vault"
path = "src/bin/validate-vault.rs"

[dev-dependencies]
heron-metrics = { workspace = true }
tempfile = "3"

[lints]
workspace = true
