[package]
name = "herond"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "herond"
path = "src/main.rs"

[dependencies]
heron-event = { workspace = true }
heron-event-http = { workspace = true }
heron-session = { workspace = true }
heron-types = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }

[lints]
workspace = true
